[package]
name = "xray"
description = "Testing the speed of boringtun"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1.31"
tracing-subscriber = "0.3.9"
tracing-appender = "0.2.1"
ipnetwork = "0.20"
pcap = "2.2.0"
pnet = "0.35"
x25519-dalek = "2.0"
curve25519-dalek = "4.1"
tokio = { version = "1.41", features = ["macros", "rt-multi-thread", "time", "net", "sync"] }
futures = "0.3"
rand = "0.8.5"
thiserror = "1.0"
csv = "1.3.1"
nix = { version = "0.29.0", features = ["fs"] }
base64 = "0.22.1"
clap = { version = "4.5", features = ["derive"] }

[dependencies.neptun]
version = "0.6.0"
path = "../neptun"
features = ["device"]
