[package]
name = "xray"
description = "Traffic inspection tool for NepTUN"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.6", features = ["derive"] }
color-eyre = "0.6"
csv = "1.4.0"
curve25519-dalek = "4.1"
pcap = "2.4"
pnet = "0.35"
rand_core = "0.6"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1.52", features = ["macros", "rt-multi-thread", "time", "net", "sync"] }
x25519-dalek = "2.0"

[dependencies.neptun]
path = "../neptun"
features = ["device", "xray"]
